--- a/RA1/IL1.1/1-github_model_api.ipynb
+++ b/RA1/IL1.1/1-github_model_api.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ab37f05",
    "metadata": {},
    "outputs": [
@@ -55,11 +55,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OpenAI library version: 1.78.1\n",
-      "Python version: 3.11.7 (main, Dec  4 2023, 18:10:11) [Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
+      "OpenAI library version: 1.100.0\n",
+      "Python version: 3.13.5 (tags/v3.13.5:6cb20a2, Jun 11 2025, 16:15:46) [MSC v.1943 64 bit (AMD64)]\n",
       "Base URL configurada: https://models.inference.ai.azure.com\n",
       "API Key configurada: ✓\n",
-      "API Key preview: ghp_ZNjZDL...IP7U\n"
+      "API Key preview: ghp_aW0sxG...HBnM\n"
      ]
     }
    ],
@@ -104,14 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Respuesta del Modelo ===\n",
-      "¡Hola! Estoy aquí y listo para ayudarte.\n",
-      "\n",
-      "=== Información Técnica ===\n",
-      "Modelo usado: gpt-4o-2024-11-20\n",
-      "Tokens usados: 30\n",
-      "Tokens de entrada: 19\n",
-      "Tokens de salida: 11\n"
+      "Error en la llamada: name 'client' is not defined\n",
+      "Verifica tu configuración y conexión a internet\n"
      ]
     }
    ],
@@ -156,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "j1b57r1oeo",
    "metadata": {},
    "outputs": [
@@ -164,15 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Respuesta con Mensaje de Sistema ===\n",
-      "¡Claro! Una API, que significa **Interfaz de Programación de Aplicaciones** (por sus siglas en inglés, *Application Programming Interface*), es como un puente que permite que dos sistemas, programas o aplicaciones diferentes se comuniquen entre sí y compartan información o funciones.\n",
-      "\n",
-      "### Piensa en una API como un **menú en un restaurante**:\n",
-      "- Cuando vas a un restaurante, no entras a la cocina para decirle al chef qué ingredientes usar o cómo preparar tu comida. En su lugar, miras el menú (la API del restaurante) y eliges lo que quieres.\n",
-      "- El camarero (el intermediario) lleva tu pedido a la cocina, y el chef te devuelve el plato terminado.\n",
-      "- En este ejemplo, tú no necesitas saber cómo funciona la cocina por dentro, ni el chef necesita saber quién eres o qué haces. Solo sigues el \"protocolo\" del menú para pedir lo que necesitas.\n",
-      "\n",
-      "### Ahora, llevémoslo a la\n"
+      "Error: name 'client' is not defined\n"
      ]
     }
    ],
@@ -223,44 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "j48bg48xqs",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==================================================\n",
-      "TEMPERATURE: 0.1\n",
-      "==================================================\n",
-      "En un pequeño taller lleno de herramientas y cables, un robot llamado K1-T0 despertó a la vida. Su creador, un inventor apasionado, le había dado una misión: aprender a cocinar para ayudar en la cocina del vecindario.\n",
-      "\n",
-      "Al principio, K1-T0 era torpe. Confundía la sal con el azúcar y cortaba las zanahorias en formas extrañas. Pero cada error era una lección. Observaba tutoriales, leía libros de recetas\n",
-      "\n",
-      "Tokens usados: 121\n",
-      "\n",
-      "==================================================\n",
-      "TEMPERATURE: 0.5\n",
-      "==================================================\n",
-      "En un pequeño taller de una ciudad futurista, un robot llamado C1-B0, diseñado para tareas de limpieza, encontró un viejo libro de recetas olvidado en una esquina polvorienta. Intrigado por las coloridas imágenes de platos, decidió intentarlo.\n",
-      "\n",
-      "Al principio, C1-B0 confundió la sal con el azúcar y quemó más de un sartén, pero su curiosidad era inagotable. Día tras día, ajustaba sus algoritmos, perfeccionando sus\n",
-      "\n",
-      "Tokens usados: 121\n",
-      "\n",
-      "==================================================\n",
-      "TEMPERATURE: 0.9\n",
-      "==================================================\n",
-      "En un pequeño taller lleno de herramientas y cables sueltos, un robot llamado K-3PO fue activado por primera vez. Su creador, el inventor Arturo, le había dado una tarea sencilla: aprender a cocinar. K-3PO, equipado con sensores de última generación pero sin experiencia culinaria, comenzó su travesía.\n",
-      "\n",
-      "El robot pasó sus primeras horas estudiando recetas digitales, midiendo ingredientes con precisión milimétrica y observando tutoriales de chefs famosos. Sin embargo,\n",
-      "\n",
-      "Tokens usados: 121\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Comparando diferentes valores de temperature\n",
     "def comparar_temperature():\n",
@@ -324,6 +276,58 @@
     "\n",
     "En el siguiente notebook exploraremos cómo LangChain simplifica y abstrae estas operaciones, proporcionando herramientas más poderosas para el desarrollo de aplicaciones con LLMs."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3121434b",
+   "metadata": {},
+   "source": [
+    "# Desarrollo de ejercicios ============================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "54d126f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: name 'client' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "def usar_mensaje_sistema():\n",
+    "    try:\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=\"gpt-4o\",\n",
+    "            messages=[\n",
+    "                {\n",
+    "                    \"role\": \"system\", \n",
+    "                    \"content\": \"\"\"Eres un experto en filosofia que buca ayudar y acompañar a estudiantes, \"\n",
+    "                    explicas temas complicados con ejemplos faciles ,ademas trastas de que el alumno busque salir de la mala situacion.\"\"\"\n",
+    "                },\n",
+    "                {\n",
+    "                    \"role\": \"user\", \n",
+    "                    \"content\": \"estoy triste\"\n",
+    "                }\n",
+    "            ],\n",
+    "            temperature=0.7,\n",
+    "            max_tokens=100\n",
+    "        )\n",
+    "        \n",
+    "        print(\"=== Respuesta con Mensaje de Sistema ===\")\n",
+    "        print(response.choices[0].message.content)\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "\n",
+    "# Ejecutar función\n",
+    "usar_mensaje_sistema()"
+   ]
   }
  ],
  "metadata": {
@@ -342,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
